--- a/palodelincak/events/Gemfile
+++ b/palodelincak/events/Gemfile
@@ -43,3 +43,8 @@ end
 
 # Use debugger
 # gem 'debugger', group: [:development, :test]
+
+gem 'slim'
+gem 'bootstrap-sass', '~> 3.0.2.0'
+gem 'compass-rails', '~> 2.0.alpha.0'
+gem 'font-awesome-rails'
