--- a/patrik-bona/events/Gemfile
+++ b/patrik-bona/events/Gemfile
@@ -8,6 +8,7 @@ gem 'coffee-rails', '~> 4.0.0'
 gem 'jquery-rails'
 gem 'turbolinks'
 gem 'jbuilder', '~> 2.0'
+gem 'bootstrap-sass', '~> 3.1.1'
 
 group :development do
   gem 'spring'
