--- a/eventer/Gemfile
+++ b/eventer/Gemfile
@@ -27,7 +27,8 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 gem 'spring', group: :development
 
 group :development, :test do
-  gem 'rspec-rails'
+  gem 'rspec-rails', '~> 3.0.0.beta2'
+  gem 'capybara'
 end
 
 # Use ActiveModel has_secure_password
