--- a/m1k3/events/Gemfile
+++ b/m1k3/events/Gemfile
@@ -38,6 +38,8 @@ gem 'spring',        group: :development
 # Use debugger
 # gem 'debugger', group: [:development, :test]
 
+gem 'haml-rails'
+
 
 group :development, :test do
   gem 'rspec-rails'
