--- a/m1k3/events/Gemfile
+++ b/m1k3/events/Gemfile
@@ -39,6 +39,7 @@ gem 'spring',        group: :development
 # gem 'debugger', group: [:development, :test]
 
 gem 'haml-rails'
+gem 'foundation-rails'
 
 
 group :development, :test do
