--- a/m1k3/events/Gemfile
+++ b/m1k3/events/Gemfile
@@ -40,6 +40,7 @@ gem 'spring',        group: :development
 
 gem 'haml-rails'
 gem 'foundation-rails'
+gem 'devise'
 
 
 group :development, :test do
