--- a/srigi/expressjs/bower.json
+++ b/srigi/expressjs/bower.json
@@ -3,6 +3,12 @@
   "version" : "1.0.0",
 
   "dependencies": {
-    "ratchet": "git://github.com/twbs/ratchet.git#~2.0.2"
+    "angular"           : "~1.2.16",
+    "angular-resource"  : "~1.2.16",
+    "angular-route"     : "~1.2.16",
+    "angular-truncate"  : "latest",
+    "lodash"            : "~2.4.1",
+    "ngstorage"         : "~0.3.0",
+    "ratchet"           : "git://github.com/twbs/ratchet.git#~2.0.2"
   }
 }
