--- a/srigi/expressjs/package.json
+++ b/srigi/expressjs/package.json
@@ -27,9 +27,11 @@
     "grunt"                   : "~0.4.4",
     "grunt-contrib-coffee"    : "~0.10.1",
     "grunt-contrib-compass"   : "~0.7.2",
+    "grunt-contrib-jade"      : "~0.11.0",
     "grunt-contrib-watch"     : "~0.6.1",
     "grunt-express"           : "~1.2.1",
-    "grunt-newer"             : "~0.7.0",
+    "grunt-html2js"           : "~0.2.4",
+    "grunt-include-source"    : "~0.3.5",
     "load-grunt-tasks"        : "~0.4.0",
     "time-grunt"              : "~0.3.1"
   }
