--- a/minio-sk-plain-rails/Gemfile
+++ b/minio-sk-plain-rails/Gemfile
@@ -29,7 +29,7 @@ gem 'spring', group: :development
 gem 'devise'
 
 group :development, :test do
-  gem 'rspec-rails', '~> 3.0.0.beta2'
+  gem 'rspec-rails', '~> 2.14.2'
   gem 'capybara'
   gem 'quiet_assets'
 end
